add visibility styling and jQuery code to clear the form after submition

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,3 +17,8 @@ body {
 .listOutput:hover {
     text-decoration: underline
 }
+
+.visibility {
+    background-color: black;
+    color : white;
+}
